refactor: streamline code by simplifying method implementations and enhancing readability